# CustomUserModel

./: .codecov.yml  .editorconfig  .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
api/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  viewsets.py
users/migrations/: 0001_initial.py
users/tests/: fixture.py  test_models.py  test_viewsets.py
